erDiagram
  USUARIO ||--|| PROFESIONAL : "login de"
  
  %% FICHA GENERAL (libre, se puede crear en cualquier momento)
  FICHA ||--o{ EVALUACION : "puede recibir múltiples"
  FICHA ||--o{ CONSENTIMIENTO_FIRMA : "puede tener múltiples firmas"
  
  %% EVALUACIÓN (obligatoria para ventas)
  EVALUACION ||--o{ FICHA_ESPECIFICA : "puede generar múltiples"
  EVALUACION ||--|| PROFESIONAL : "realizada por"
  EVALUACION ||--|| TRATAMIENTO : "evalúa"
  EVALUACION ||--o{ PACK : "puede sugerir"
  
  %% FICHA ESPECÍFICA (nace en la evaluación)
  TIPO_FICHA_ESPECIFICA ||--o{ FICHA_ESPECIFICA : "clasifica"
  FICHA_ESPECIFICA ||--o{ ZONA_CUERPO : "incluye"
  FICHA_ESPECIFICA ||--o{ CONSENTIMIENTO_FIRMA : "requiere si es depilación"
  
  %% VENTA (requiere evaluación y ficha específica)
  EVALUACION ||--o{ VENTA : "requerida para"
  FICHA_ESPECIFICA ||--o{ VENTA : "requerida para"
  VENTA ||--|| TRATAMIENTO : "incluye"
  VENTA ||--o{ PACK : "puede incluir"
  
  %% CONSENTIMIENTO (solo para depilación)
  CONSENTIMIENTO_FIRMA ||--|| PROFESIONAL : "atestiguado por"
  CONSENTIMIENTO_FIRMA ||--|| FICHA_ESPECIFICA : "pertenece a"
  
  %% SESIONES (agendadas desde venta)
  VENTA ||--o{ SESION : "agenda"
  SUCURSAL ||--o{ SESION : "se_realiza_en"
  BOX ||--o{ SESION : "ocupa"
  PROFESIONAL ||--o{ SESION : "atiende"
  SUCURSAL ||--o{ BOX : "tiene"
  
  %% OFERTAS Y DESCUENTOS
  OFERTA ||--o{ OFERTA_PACK : "aplica_a"
  OFERTA ||--o{ OFERTA_TRATAMIENTO : "aplica_a"
  PACK ||--o{ OFERTA_PACK : "afectado"
  TRATAMIENTO ||--o{ OFERTA_TRATAMIENTO : "afectado"
  OFERTA ||--o{ OFERTA_COMBO : "define"
  OFERTA_COMBO ||--o{ OFERTA_COMBO_PACK : "incluye"
  PACK ||--o{ OFERTA_COMBO_PACK : "parte"
  
  VENTA ||--o{ VENTA_OFERTA : "descuento sobre descuento"
  OFERTA ||--o{ VENTA_OFERTA : "aplicado"
  
  %% PAGOS
  VENTA ||--o{ PAGO : "recibe"
  PAGO ||--o{ PAGO_DETALLE : "tiene"

  %% ENTIDADES PRINCIPALES
  FICHA {
    bigserial id PK
    varchar codigo NOT NULL
    varchar nombres NOT NULL
    varchar apellidos NOT NULL
    varchar rut NOT NULL
    varchar telefono NOT NULL
    varchar email UNIQUE NOT NULL
    date fecha_nacimiento NOT NULL
    text direccion NOT NULL
    text observaciones NOT NULL
    timestamptz fecha_creacion
    timestamptz fecha_actualizacion
  }

  %% EVALUACIÓN (obligatoria para ventas)
  EVALUACION {
    bigserial id PK
    bigint ficha_id FK NOT NULL
    bigint profesional_id FK NOT NULL
    bigint tratamiento_id FK NOT NULL
    bigint pack_id FK "opcional"
    numeric precio_sugerido NOT NULL DEFAULT 0
    int sesiones_sugeridas NOT NULL
    text observaciones NOT NULL
    text recomendaciones NOT NULL
    varchar estado NOT NULL "PENDIENTE, COMPLETADA, CANCELADA"
    timestamptz fecha_evaluacion NOT NULL
    timestamptz fecha_creacion
    timestamptz fecha_actualizacion
  }

  %% TIPOS DE FICHA ESPECÍFICA (basados en fichas HTML reales)
  TIPO_FICHA_ESPECIFICA {
    bigserial id PK
    varchar nombre NOT NULL "DEPILACION, CORPORAL_FACIAL"
    text descripcion NOT NULL
    boolean requiere_consentimiento NOT NULL
    text template_consentimiento "solo si requiere_consentimiento"
    jsonb campos_requeridos NOT NULL "estructura de campos según tipo"
    boolean activo NOT NULL DEFAULT TRUE
  }

  %% FICHA ESPECÍFICA (nace en la evaluación)
  FICHA_ESPECIFICA {
    bigserial id PK
    bigint evaluacion_id FK NOT NULL
    bigint tipo_id FK NOT NULL
    jsonb datos NOT NULL "campos específicos según tipo"
    boolean consentimiento_firmado NOT NULL DEFAULT FALSE
    text observaciones NOT NULL
    timestamptz fecha_creacion
    timestamptz fecha_actualizacion
  }

  %% CONSENTIMIENTO (solo para depilación)
  CONSENTIMIENTO_FIRMA {
    bigserial id PK
    bigint ficha_id FK NOT NULL
    bigint ficha_especifica_id FK NOT NULL
    bigint profesional_id FK NOT NULL
    varchar tipo_consentimiento NOT NULL "DEPILACION"
    bytea firma_blob NOT NULL "PNG como BLOB"
    varchar tipo_archivo NOT NULL "image/png"
    text contenido_leido NOT NULL "texto que leyó el profesional"
    timestamptz fecha_firma NOT NULL
    text observaciones NOT NULL
  }

  ZONA_CUERPO {
    varchar codigo PK
    varchar nombre NOT NULL
    varchar categoria NOT NULL "FACIAL, CORPORAL, CAPILAR"
    numeric precio_base NOT NULL
    boolean activo NOT NULL DEFAULT TRUE
  }

  TRATAMIENTO {
    bigserial id PK
    varchar nombre NOT NULL
    text descripcion NOT NULL
    boolean requiere_ficha_especifica NOT NULL
    varchar tipo_ficha_requerida "DEPILACION, CORPORAL_FACIAL, AMBAS"
    int duracion_sesion_min NOT NULL
    int frecuencia_recomendada_dias NOT NULL
    boolean activo NOT NULL DEFAULT TRUE
    timestamptz fecha_creacion
  }

  PRECIO_TRATAMIENTO {
    bigserial id PK
    bigint tratamiento_id FK NOT NULL
    numeric precio_regular NOT NULL
    numeric precio_oferta "opcional"
    date fecha_inicio_oferta "opcional"
    date fecha_fin_oferta "opcional"
    boolean activo NOT NULL DEFAULT TRUE
    timestamptz fecha_creacion
  }

  PACK {
    bigserial id PK
    bigint tratamiento_id FK NOT NULL
    varchar nombre NOT NULL
    text descripcion NOT NULL
    int duracion_sesion_min NOT NULL
    int sesiones_incluidas NOT NULL
    jsonb zonas_incluidas NOT NULL
    jsonb precio_por_zona NOT NULL
    numeric precio_regular NOT NULL
    numeric precio_oferta "opcional"
    date fecha_inicio_oferta "opcional"
    date fecha_fin_oferta "opcional"
    boolean activo NOT NULL DEFAULT TRUE
    timestamptz fecha_creacion
  }

  OFERTA {
    bigserial id PK
    varchar nombre NOT NULL
    varchar tipo NOT NULL "PACK, TRATAMIENTO, COMBO"
    text descripcion NOT NULL
    numeric porc_descuento NOT NULL
    date fecha_inicio NOT NULL
    date fecha_fin NOT NULL
    boolean combinable NOT NULL
    boolean activo NOT NULL DEFAULT TRUE
    int prioridad NOT NULL
    timestamptz fecha_creacion
  }

  OFERTA_PACK {
    bigserial id PK
    bigint oferta_id FK NOT NULL
    bigint pack_id FK NOT NULL
    numeric porc_descuento NOT NULL
  }

  OFERTA_TRATAMIENTO {
    bigserial id PK
    bigint oferta_id FK NOT NULL
    bigint tratamiento_id FK NOT NULL
    numeric porc_descuento NOT NULL
  }

  OFERTA_COMBO {
    bigserial id PK
    bigint oferta_id FK NOT NULL
    int min_packs NOT NULL
    numeric porc_descuento_adicional NOT NULL
  }

  OFERTA_COMBO_PACK {
    bigserial id PK
    bigint oferta_combo_id FK NOT NULL
    bigint pack_id FK NOT NULL
  }

  %% VENTA (requiere evaluación y ficha específica, excepto para EVALUACION)
  VENTA {
    bigserial id PK
    bigint ficha_id FK NOT NULL
    bigint evaluacion_id FK "NULL para EVALUACION"
    bigint ficha_especifica_id FK "NULL para EVALUACION"
    bigint tratamiento_id FK NOT NULL
    bigint pack_id FK "opcional"
    int cantidad_sesiones NOT NULL
    numeric precio_lista NOT NULL
    numeric descuento_manual_pct DEFAULT 0
    numeric descuento_aplicado_total DEFAULT 0
    numeric total_pagado NOT NULL
    varchar estado NOT NULL "PENDIENTE, PAGADA, CANCELADA"
    text observaciones NOT NULL
    timestamptz fecha_creacion
    timestamptz fecha_actualizacion
  }

  VENTA_OFERTA {
    bigserial id PK
    bigint venta_id FK NOT NULL
    bigint oferta_id FK NOT NULL
    int secuencia NOT NULL
    numeric porc_descuento NOT NULL
    numeric monto_descuento NOT NULL
  }

  PAGO {
    bigserial id PK
    bigint venta_id FK NOT NULL
    numeric monto_total NOT NULL
    varchar estado NOT NULL "PENDIENTE, COMPLETADO, CANCELADO"
    text observaciones NOT NULL
    timestamptz fecha_creacion
  }

  PAGO_DETALLE {
    bigserial id PK
    bigint pago_id FK NOT NULL
    numeric monto NOT NULL
    varchar metodo_pago NOT NULL
    varchar referencia NOT NULL
    text observaciones NOT NULL
    timestamptz fecha_pago NOT NULL
  }

  SUCURSAL {
    bigserial id PK
    varchar nombre NOT NULL
    varchar direccion NOT NULL
    varchar telefono NOT NULL
    varchar email NOT NULL
    boolean activo NOT NULL DEFAULT TRUE
    timestamptz fecha_creacion
  }

  BOX {
    bigserial id PK
    bigint sucursal_id FK NOT NULL
    varchar nombre NOT NULL
    varchar descripcion NOT NULL
    boolean activo NOT NULL DEFAULT TRUE
    timestamptz fecha_creacion
  }

  USUARIO {
    bigserial id PK
    varchar username UNIQUE
    varchar password_hash
    varchar email UNIQUE
    varchar rol
    boolean activo
    timestamptz ultimo_login
    timestamptz fecha_creacion
    timestamptz fecha_actualizacion
  }

  PROFESIONAL {
    bigserial id PK
    bigint usuario_id FK
    varchar nombre NOT NULL
    varchar apellidos NOT NULL
    varchar rut UNIQUE NOT NULL
    varchar telefono NOT NULL
    varchar email UNIQUE NOT NULL
    varchar tipo_profesional NOT NULL
    text bio NOT NULL
    text foto_url NOT NULL
    varchar especialidad NOT NULL
    varchar titulo_profesional NOT NULL
    varchar numero_colegio NOT NULL
    date fecha_nacimiento NOT NULL
    varchar direccion NOT NULL
    varchar estado_civil NOT NULL
    varchar grupo_sanguineo NOT NULL
    varchar contacto_emergencia NOT NULL
    varchar telefono_emergencia NOT NULL
    boolean activo NOT NULL DEFAULT TRUE
    timestamptz fecha_creacion
    timestamptz fecha_actualizacion
  }

  SESION {
    bigserial id PK
    bigint venta_id FK NOT NULL
    int numero_sesion NOT NULL
    bigint sucursal_id FK NOT NULL
    bigint box_id FK NOT NULL
    bigint profesional_id FK NOT NULL
    varchar google_calendar_event_id "NULL hasta integrar con Google Calendar"
    timestamptz fecha_planificada NOT NULL
    timestamptz fecha_ejecucion "NULL hasta ejecutar la sesión"
    varchar estado NOT NULL DEFAULT planificada "planificada|confirmada|realizada|no_show|cancelada"
    boolean paciente_confirmado NOT NULL DEFAULT FALSE
    timestamptz abierta_en "NULL hasta abrir la sesión"
    timestamptz cerrada_en "NULL hasta cerrar la sesión"
    text observaciones "NULL si no hay observaciones"
          jsonb intensidades_zonas NOT NULL "JSON vacío por defecto"
      jsonb datos_sesion NOT NULL "JSON vacío por defecto"
    timestamptz fecha_creacion
    timestamptz fecha_actualizacion
  }
